[project]
packages = ["pubmed_paper_fetcher"]

name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "A tool to fetch research papers with non-academic authors from PubMed."
authors = [
    {name = "Shreya-0176", email = "shreyakulal42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pubmed-paper-fetcher = "pubmed_paper_fetcher.cli:main"

