[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch scientific papers from PubMed"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "pubmed_paper_fetcher" }]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pandas = "^2.2.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"
